--- a/bot-ui/package.json
+++ b/bot-ui/package.json
@@ -8,6 +8,7 @@
   },
   "author": "",
   "dependencies": {
+    "bootstrap": "3.3.7",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
@@ -15,7 +16,8 @@
     "redux-logger": "3.0.6",
     "redbox-react": "^1.3.6",
     "isomorphic-fetch": "2.2.1",
-    "es6-promise": "4.1.0"
+    "es6-promise": "4.1.0",
+    "react-bootstrap": "0.31.0"
   },
   "devDependencies": {
     "dotenv": "4.0.0",
@@ -31,6 +33,9 @@
     "babel-preset-react": "^6.24.1",
     "babel-runtime": "^6.20.0",
     "babel-polyfill": "^6.20.0",
+    "css-loader": "0.26.1",
+    "extract-text-webpack-plugin": "2.1.0",
+    "file-loader": "0.9.0",
     "react-to-html-webpack-plugin": "2.2.0",
     "webpack": "2.6.1",
     "webpack-dev-server": "2.4.5",
